--- a/frontend/templates/frontend/login.html
+++ b/frontend/templates/frontend/login.html
@@ -32,7 +32,7 @@
       </div>
       <div class="flex-1" style="min-width: 280px;">
         <div class="rounded-lg overflow-hidden shadow-lg">
-          <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?auto=format&fit=crop&q=80&w=800"
+          <img src="https://images.pexels.com/photos/5668887/pexels-photo-5668887.jpeg?auto=compress&cs=tinysrgb&w=800"
             alt="Mental Wellness" class="img-cover" style="height: 420px;">
         </div>
       </div>
